fix test and some smells
Signed-off-by: Stefan Pingel <stefan.pingel@consensys.net>